# QComNetSim

./: .gitignore  Cargo.toml  README.md  pyproject.toml  run_validation.sh
benches/: extract_parallel_results.py  extract_quantum_results.py  extract_scheduling_results.py  parallel_benchmark.rs  quantum_benchmark.rs  scheduler_benchmark.rs
benches/python/: parallel_benchmark.py  quantum_benchmark.py  scheduler_benchmark.py
benches/results/: python_parallel_results.csv  python_quantum_results.csv  python_scheduling_results.csv  rust_parallel_results.csv  rust_quantum_results.csv  rust_scheduling_results.csv
examples/: measurement_demo.rs  pauli_gates_demo.rs  random_qubit_state.rs  simple_scheduler.rs  topology_demo.rs  two_node_barrett_kok.rs  two_node_entanglement.rs
src/: lib.rs
src/network/: channel.rs  mod.rs  node.rs  operations.rs  topology.rs
src/protocols/: barrett_kok.rs  mod.rs
src/quantum/: gates.rs  measurement.rs  mod.rs  noise.rs  state.rs
src/simulation/: event.rs  mod.rs  scheduler.rs
src/validation/: merge_results.py  plot_comparison.py
src/validation/sequence/: two_node_barrett_kok.py
