[package]
name = "QComNetSim"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
ndarray = "0.17.1"
num-complex = "0.4.6"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
criterion = "0.7.0"
