[project]
name = "qcomnetsim-validation"
version = "0.1.0"
description = "Cross-simulator validation for QComNetSim"
requires-python = ">=3.11"
dependencies = [
    "sequence>=0.8.1",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
# UV-specific settings
dev-dependencies = [
    "pytest>=7.0.0",
]
